--- a/src/Components/Navbar/style.css
+++ b/src/Components/Navbar/style.css
@@ -1,16 +1,19 @@
-.navbar-brand{
-    color:#1c4f84;
-    font-weight: 700;
+.navbar-brand {
+  font-weight: 700;
+}
+@media (max-width: 1000px) {
+  .navbar-brand {
+    color: white;
   }
-  @media (max-width: 1000px) {
-
-    .navbar-brand {
-        color:white;
-    }
-
-} 
-  .nav-item{
-      color: white;
-      font-weight: 500;
-  }
-  .navbar-toggler { border-color: #fff; }
+}
+.nav-item {
+  color: white;
+  font-weight: 500;
+}
+.navbar-toggler {
+  border-color: #fff;
+}
+.nav-item:hover {
+  color: white;
+  border-bottom: 1px solid white;
+}
